remove unused code & update favicon

--- a/src/App.css
+++ b/src/App.css
@@ -1,91 +1,12 @@
-:root {
-    /*--white-text: #f5f5f5;*/
-    /*--page_title_font_size: 40px;*/
-    /*--section-title-font-size: 35px;*/
-    /*--section-text-font-size: 25px;*/
-    /*--label-font-size: 20px;*/
-    /*--icon-hover-opacity: 0.5;*/
-    /*--icon-hover-transition: opacity 0.2s ease;*/
-}
-
-/**,*/
-/**::before,*/
-/**::after {*/
-/*    box-sizing: border-box;*/
-/*}*/
-
-/*body,*/
-/*h1,*/
-/*h2,*/
-/*h3,*/
-/*p {*/
-/*    margin: 0;*/
-/*}*/
-
 html {
     /* Photo by Arnold Francisca - Unsplash */
     background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(images/laptopBackgroundImage.jpg) no-repeat center center fixed;
-/*    -webkit-background-size: cover;*/
-/*    -moz-background-size: cover;*/
-/*    -o-background-size: cover;*/
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     background-size: cover;
     backdrop-filter: blur(2px);
 }
-
-/*body {*/
-/*    font-weight: 400;*/
-/*    font-size: 1.3125rem;*/
-/*    line-height: 1.6;*/
-/*    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',*/
-/*    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',*/
-/*    sans-serif;*/
-/*    -webkit-font-smoothing: antialiased;*/
-/*    -moz-osx-font-smoothing: grayscale;*/
-/*}*/
-
-/*h1,*/
-/*h2,*/
-/*h3 {*/
-/*    font-weight: 900;*/
-/*    line-height: 1;*/
-/*    margin-bottom: 1em;*/
-/*}*/
-
-/*h1,*/
-/*h2,*/
-/*h3,*/
-/*p {*/
-/*    color: var(--white-text);*/
-/*}*/
-
-/*p + p {*/
-/*    margin-left: 1em;*/
-/*}*/
-
-/*header {*/
-/*    padding-bottom: 2rem;*/
-/*}*/
-
-/*header,*/
-/*section{*/
-/*    padding: 2rem 0;*/
-/*}*/
-
-.color-primary-white {
-    color: var(--white-text)
-}
-
-/*@media (min-width: 40em) {*/
-/*    header,*/
-/*    section {*/
-/*        padding-left: 7rem;*/
-/*        padding-right: 7rem;*/
-/*    }*/
-/*}*/
-
-/*.navbar_home_icon {*/
-/*    transform: scale(1.5);*/
-/*}*/
 
 a {
     text-decoration: none;
@@ -95,201 +16,5 @@ a {
 a:hover {
   text-decoration-line: underline;
 }
-
-/*.container {*/
-/*    margin-inline: auto;*/
-/*    width: min(90%, 70.5rem);*/
-/*    margin-bottom: 1rem;*/
-/*}*/
-
-/*@media (min-width: 40em) {*/
-/*    .container {*/
-/*        padding-bottom: 2rem;*/
-/*    }*/
-/*}*/
-
-/*.container--narrow {*/
-/*    max-width: 30rem;*/
-/*}*/
-
-/*.appbar {*/
-    /*color: var(--white-text) !important;*/
-/*}*/
-
-/*nav {*/
-/*    padding: 1rem;*/
-/*}*/
-
-/*.small-margin {*/
-/*    margin: 0.25em;*/
-/*}*/
-
-/*.flex {*/
-/*    display: flex;*/
-/*    flex-direction: row;*/
-/*    flex-wrap: wrap;*/
-/*}*/
-
-/*.center-flex {*/
-/*    justify-content: center;*/
-/*}*/
-
-/*.right-flex {*/
-/*    justify-content: flex-end;*/
-/*}*/
-
-/*@media (min-width: 40em) {*/
-/*    .flex-col {*/
-/*        flex-direction: column;*/
-/*    }*/
-/*}*/
-
-/*.text-center {*/
-/*    text-align: center;*/
-/*}*/
-
-/*.text-right {*/
-/*    text-align: right;*/
-/*}*/
-
-/*img {*/
-/*    height: 13.3rem;*/
-/*    width: 10rem;*/
-/*}*/
-
-/*.opaque:hover {*/
-/*    opacity: 0.5;*/
-/*    transition: opacity 0.2s ease;*/
-/*}*/
-
-/*.profile-img {*/
-    /* height to width ratio === 1.33 */
-    /*border-radius: 60%; !* fix to make more round later *!*/
-/*}*/
-
-/* Hide the browser's default checkbox */
-/*.checkbox-container input {*/
-/*    position: absolute;*/
-/*    opacity: 0;*/
-/*    cursor: pointer;*/
-/*    height: 0;*/
-/*    width: 0;*/
-/*}*/
-
-/* Create a custom checkbox */
-.checkmark {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 25px;
-    width: 25px;
-    background-color: #eee;
-}
-
-/* Customize the label (the container) */
-.checkbox-container {
-    display: flex;
-    position: relative;
-    padding-left: 35px;
-    margin-bottom: 12px;
-    cursor: pointer;
-    font-size: 22px;
-    color: whitesmoke;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-
-.checkbox-col {
-    padding: 1em;
-}
-
-/*@media (min-width: 40em) {*/
-/*    .checkbox-col {*/
-/*        padding-left: 4em;*/
-/*        padding-right: 4em;*/
-/*    }*/
-
-
-/*}*/
-
-/* On mouse-over, add a grey background color */
-.checkbox-container:hover input ~ .checkmark {
-    background-color: #ccc;
-}
-
-/* When the checkbox is checked, add a blue background */
-.checkbox-container input:checked ~ .checkmark {
-    background-color: #2196F3;
-}
-
-/* Create the checkmark/indicator (hidden when not checked) */
-.checkmark:after {
-    content: "";
-    position: absolute;
-    display: none;
-}
-
-/* Show the checkmark when checked */
-.checkbox-container input:checked ~ .checkmark:after {
-    display: block;
-}
-
-/* Style the checkmark/indicator */
-.checkbox-container .checkmark:after {
-    left: 9px;
-    top: 5px;
-    /*width: 5px;*/
-    width: 2rem;
-    /*height: 10px;*/
-    height: 4rem;
-    border: solid white;
-    border-width: 0 3px 3px 0;
-    -webkit-transform: rotate(45deg);
-    -ms-transform: rotate(45deg);
-    transform: rotate(45deg);
-}
-
-label.checkbox-container {
-    /*height: 56px;*/
-    height: 4rem;
-    /*width: 56px;*/
-    width: 4rem;
-}
-
-.slider {
-    width: 30%;
-    margin-right: 10px;
-    margin-left: 10px;
-}
-
-/*.center-flex ~ p {*/
-/*    align-self: flex-start;*/
-/*}*/
-
-
-/*#ml_login_img {*/
-/*    border-radius: 0 !important;*/
-/*    height: 20rem;*/
-/*    width: 15rem;*/
-/*}*/
-
-/*#ml_vitals_img {*/
-/*    border-radius: 0 !important;*/
-/*    height: 35rem;*/
-/*    width: 15rem;*/
-/*}*/
-
-/*#results_screen_img {*/
-/*    border-radius: 0 !important;*/
-/*    height: 30rem;*/
-/*    width: 15rem;*/
-/*}*/
-
-/*section > div > img {*/
-/*    margin-top: 1.5em;*/
-/*    margin-bottom: 1.5em;*/
-/*}*/
 
 
