--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,23 @@
 html {
-    /* Photo by Arnold Francisca - Unsplash */
-    background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(images/laptopBackgroundImage.jpg) no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    backdrop-filter: blur(2px);
+  /* Photo by Arnold Francisca - Unsplash */
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url(images/laptopBackgroundImage.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  backdrop-filter: blur(2px);
 }
 
 a {
-    text-decoration: none;
-    color: cornflowerblue;
+  text-decoration: none;
+  color: cornflowerblue;
 }
 
 a:visited {
-    color: cornflowerblue;
+  color: cornflowerblue;
 }
 
 a:hover {
   text-decoration-line: underline;
 }
-
-
